--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ android {
 }
 
 dependencies {
+    // coil
+    implementation 'io.coil-kt:coil-compose:1.4.0'
+
+    // icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
     implementation 'androidx.core:core-ktx:1.7.0'
