--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     // icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
+    // build.gradle
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
